<resources>
    <string name="oxford_subscription_key" translatable="false">f862259efc314bdbbef51000f399f168</string>
    <string name="server_client_id">982244912173-jdh741u5776vd03ldck2uk2l7efanm1a.apps.googleusercontent.com</string>
    <string name="app_name" translatable="false">OneRide</string>
    <string name="app_label" translatable="false">Fast Ride</string>
    <string name="action_settings">Settings</string>
    <string name="complete_registration">Complete your info</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_register">Free Ride: Registration</string>
    <string name="title_activity_confirm_ride">Confirm</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone number:</string>
    <string name="prompt_sms_confirm">PIN</string>
    <string name="phone_hint" translatable="false">054&#8211;123&#8211;4567</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="plus_sign_out">Switch Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_register">Register</string>
    <string name="registration_add_title">Performing registration</string>
    <string name="registration_account_validate">Verifying your account</string>
    <string name="no_sim">Unable to continue without SIM-card</string>
    <string name="registration_account_validation_failure">Account Validation Failure</string>
    <string name="registration_exists">It seems that this account was already registered. Replace previous registration?</string>
    <string name="registration_add_status_wait">Just few seconds</string>
    <string name="sms_code_sent">We sent you a code via SMS. Just enter it below.</string>
    <string name="sms_resend">Resend</string>
    <string name="default_value">no value</string>
    <string name="no_phone_number">Provide a valid phone number</string>
    <string name="facebook_app_id" translatable="false">1554616841424048</string>
    <string name="title_section_user">User Profile</string>
    <string name="title_section_cars">Cars</string>
    <string name="mode_name_driver">Driver</string>
    <string name="mode_name_passenger">Passenger</string>
    <string name="btnFindRide">Find a ride</string>
    <string name="title_activity_main">Fast Ride</string>
    <string name="title_activity_driver_role">Driver Mode</string>
    <string name="subtitle_activity_driver_role">Driver Mode</string>
    <string name="title_activity_passenger_role">Passenger Mode</string>
    <string name="subtitle_activity_passenger_role">Passenger Mode</string>
    <string name="title_activity_tutorial">Tutorials</string>
    <string name="subtitle_activity_tutorial">Tutorials</string>
    <string name="title_activity_my_rides">My Rides</string>
    <string name="subtitle_activity_my_rides">MyRides</string>
    <string name="title_activity_settings">Settings</string>
    <string name="subtitle_activity_settings">Settings</string>
    <string name="title_activity_ride_details">Ride Details</string>
    <string name="driver_name" translatable="false">Driver Name</string>
    <string name="passenger_name" translatable="false">Passenger Name</string>
    <string name="driver_pic" translatable="false">Driver Picture</string>
    <string name="driver_status" translatable="false">Driver Status</string>
    <string name="passengers_header">Passengers</string>
    <string name="drivers_header">Select the driver</string>
    <string name="new_version_title">New version is ready</string>
    <string name="new_version_conent">We strongly recommend to install the newest version. Would you like to do so?</string>
    <string name="generating_ride_code">Generating ride code&#8230;</string>
    <string name="ride_code_label">Ride Code:</string>
    <string name="rssi_label">Rssi:</string>
    <string name="ride_code_title">Type in Ride Code</string>
    <string name="ride_code_dialog_content">You can see this code on the driver\'s display</string>
    <string name="ride_code_wrong">You typed wrong ride code. Please try again.</string>
    <string name="discovery_failure" translatable="false">Discovery failure</string>
    <string name="ride_same_ids">Same identity for driver and passenger is prohibited</string>
    <string name="connection_lost">The connection lost. Please try again in a few seconds</string>
    <string name="ride_code_hint">6 digits without dashes</string>
    <string name="passenger_confirm">Do you want to join the ride</string>
    <string name="ride_code_refill"></string>
    <string name="passenger_details">passenger details</string>
    <string name="list_of_Carpooling">list of Carpooling</string>
    <string name="no_front_camera">Unable to perform the required action on this device because it has not front camera. Please use other device.</string>
    <string-array name="drawers_array_drawer">
        <item>Start</item>
        <item>My rides</item>
        <item>Settings</item>
    </string-array>
    <string-array name="tutorial_titles">
        <item>Intro</item>
        <item>Driver</item>
        <item>Passenger</item>
        <item>Appeal</item>
    </string-array>
    <string-array name="my_rides_titles">
        <item>General</item>
        
    </string-array>
    <string-array name="about_titles">
        <item>About</item>
        <item>Therms of service</item>
        <item>Privacy policy</item>
    </string-array>
    <string name="progress_dialog">Logging into Azure</string>
    <string name="ride_details">ride details</string>
    <string name="drive_details">Driver</string>
    <string name="list_of_passengers">Passengers</string>
    <string name="ride_photo">Ride Photo</string>
    <string name="ride_denied">Driving is not approved</string>
    <string name="operating_modes">Operating modes</string>
    <string name="edit">Edit</string>
    <string name="edit_car_button_title2">Specify</string>
    <string name="driver_no_name">No name</string>
    <string name="offline">You are offline</string>
    <string name="offline_prompt">Connect your device to the network</string>
    <string name="edit_car_dialog_caption1">Choose a riding car</string>
    <string name="edit_car_dialog_caption2">Specify your car(s)</string>
    <string name="edit_car_dialog_text">You have not yet specified the car(s) belongs to you.</string>
    <string name="add_car_dialog_caption">Add a car</string>
    <string name="edit_car_dialog_caption">Edit a car</string>
    <string name="edit_phone_dialog_caption">Edir Phone Number</string>
    <string name="add_car_button_add">Add</string>
    <string name="edit_car_button_save">Save</string>
    <string name="edit_car_button_delete">Delete</string>
    <string name="help">Help</string>
    <string name="add_car_hint">Car number</string>
    <string name="add_car_nick">Car nickname</string>
    <string name="car_number_validation_error">Type in a valid car number</string>
    <string name="enable_wifi_question">Enable Wi-Fi on your device?</string>
    <string name="enable_location_question">Do you want to enable location services on this device?</string>
    <string name="code_retry_action">Try search again</string>
    <string name="code_try_later">I\'ll do this later</string>
    <string name="registration_finish">Finish</string>
    <string name="registration_next">Next</string>
    <string name="please_wait">Please wait</string>
    <string name="processing">Processing</string>
    <string name="uploading">Uploading photo</string>
    <string name="passenger_progress_dialog">Searching for driver</string>
    <string name="passenger_advertising">Advertising</string>
    <string name="passenger_adv_description">The device will advertise itself for 30 sec.</string>
    <string name="done">Done</string>
    <string name="discover_devices">Discovering devices</string>
    <string name="ride_code_prompt">Type in the code as displayed at driver\'s  screen</string>
    <string name="picture_required_dialog_title">Group picture required</string>
    <string name="picture_required_challenge_dialog_title">Picture required with challenge</string>
    <string name="picture_required_dialog_content">The system requires you to take the picture of all passengers in the cabin</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="fb_error">No network access</string>
    <string name="fb_error_msg">The error was: </string>
    <string name="title_activity_about">About</string>
    <string name="version_title">Version </string>
    <string name="dialog_confirm_registration">Replace previous registration?</string>
    <string name="registration_already_performed">You already registered with Free Ride app.</string>
    <string name="add_cars_caption">Add your cars</string>
    <string name="with">with</string>
    <string name="close">Close</string>
    <string name="stop">Stop</string>
    <string name="thanks">Thank you</string>
    <string name="confirmation_accepted">Your confirmation was accepted</string>
    <string name="nofee_request_accepted">Your request was accepted</string>
    <string name="download_data">Initializing data</string>
    <string name="download_geofences_desc">Downloading geo-fences</string>
    <string name="download_classifiers_desc">Downloading classifiers</string>
    <string name="play_services_error">Google Play services is not available. Registration is impossible.</string>
    <string name="action_refresh_settings">Update GeoFences</string>
    <string name="action_refresh_classifiers">Update Classifiers</string>
    <string name="action_check_updates">Check for Update&#8230;</string>
    <string name="latest_version">You already have a latest version of OneRide.</string>
    <string name="about">About</string>
    <string name="picture_request">Picture required</string>
    <string name="no_face_detection">This camera does not support Face detection feature</string>
    <string name="copyright">&#169; 2015&#8211;2016 FastRide. All rights reserved.</string>
    <string name="license" translatable="false">Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
    <string name="btnSubmitText">Submit</string>
    <string name="driverTabCaption">Driver</string>
    <string name="passengerTabCaption">Passenger</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_code">Ride Code</string>
    <string name="action_debug">Debug</string>
    <string name="action_camera">FD</string>
    <string name="action_camera_cv">Camera CV</string>
    <string name="action_remind">Remind me</string>
    <string name="passenger_tutorial_fragment">Passenger tutorial</string>
    <string name="driver_tutorial_fragment">Driver tutorial</string>
    <string name="reclaim_tutorial_fragment">Appeal tutorial</string>
</resources>