<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?actionBarSize"
    android:background="@color/ColorPrimary"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.labs.okey.oneride.fragments.PhoneConfirmFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/ColorBackground"
        android:text="@string/sms_code_sent"
        android:id="@+id/textView5" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal">>
        <EditText android:id="@+id/confirmation_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_sms_confirm"
            android:inputType="phone"
            android:ellipsize="end"
            android:gravity="start"
            android:textColor="@color/ColorBackground"
            android:ems="10"
            android:textColorHint="@color/ColorBackground" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms_resend"
        android:id="@+id/resend_sms_code"
        android:textColor="@color/ColorBackground"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
