<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix"
    app:cardElevation="4dp"
    app:cardCornerRadius="6dp"
    app:cardUseCompatPadding="true"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground">

        <RelativeLayout
            android:id="@+id/device_row"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8sp"
            android:layout_marginBottom="8sp">

            <com.pkmmte.view.CircularImageView
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:layout_marginStart="2sp"
                android:layout_marginLeft="2sp"
                android:contentDescription="@string/driver_pic"
                app:border="true"
                app:border_color="#FFFFFFFF"
                app:border_width="4dp"
                android:id="@+id/userPicture"
                android:src="@drawable/driver_office"/>

            <ImageView
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:id="@+id/imgStatus"
                android:src="@drawable/load"
                android:contentDescription="@string/driver_status"
                android:layout_gravity="center_vertical"
                android:layout_alignBottom="@+id/userPicture"
                android:layout_toStartOf="@+id/linearLayout"
                android:layout_toLeftOf="@+id/linearLayout"
                android:layout_marginRight="-8sp"
                android:layout_marginEnd="-8sp"
                android:layout_marginBottom="-2sp"
                android:visibility="gone"/>

            <ProgressBar
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/status_progress"
                android:indeterminate="true"
                android:layout_gravity="center_vertical"
                android:layout_alignBottom="@+id/userPicture"
                android:layout_toLeftOf="@+id/linearLayout"
                android:layout_toStartOf="@+id/linearLayout"
                android:layout_marginRight="-8dp"
                android:layout_marginEnd="-8dp"
                android:layout_marginBottom="-2dp"
                android:progressDrawable="@drawable/circular_progress"/>

            <android.support.v7.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:gravity="center_vertical"
                android:layout_toEndOf="@+id/userPicture"
                android:layout_toRightOf="@+id/userPicture"
                android:id="@+id/linearLayout">

                <TextView
                    android:id="@+id/txt_peer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:maxLines="1"
                    android:text="@string/driver_name"
                    style="@android:style/TextAppearance.Medium"
                    tools:text="@string/driver_name" />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@android:style/TextAppearance.Small"
                        android:text="@string/rssi_label"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@android:style/TextAppearance.Small"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:id="@+id/txt_rssi"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@android:style/TextAppearance.Small"
                        android:text="@string/ride_code_label" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_ride_code"
                        style="@android:style/TextAppearance.Small"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:ellipsize="marquee"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp" />

                </LinearLayout>

            </android.support.v7.widget.LinearLayoutCompat>

        </RelativeLayout>

</LinearLayout>

</android.support.v7.widget.CardView>