<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AboutActivity"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="145dp"
                android:layout_height="112dp"
                android:id="@+id/imageView3"
                android:src="@mipmap/ic_launcher2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:layout_marginLeft="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="FastRide"
                    android:id="@+id/textView6"
                    android:textStyle="bold"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Smart Transportation"
                    android:id="@+id/textView7"
                    android:textStyle="bold"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Solutions"
                    android:id="@+id/textView8"
                    android:textStyle="bold"
                    android:textColor="@android:color/black" />

            </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/copyright"
                    android:id="@+id/textView10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/license"
                    android:id="@+id/textView9"
                    android:layout_marginTop="10dp" />

                <TextView
                    style="@style/SubCaptionStyle"
                    android:text="This product includes software from The Guava Authors"
                    android:id="@+id/textView11"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    style="@style/SubCaptionStyle"
                    android:text="This product includes software from Google, Inc. Copyright (&#169;) 2008, Google Inc. All rights reserved"
                    android:id="@+id/textView12"
                    android:layout_marginTop="10dp" />

                <TextView
                    style="@style/SubCaptionStyle"
                    android:text="This product includes the Azure SDK libraries software from Microsoft, Inc. distributed under Apache License, Version 2.0 "
                    android:id="@+id/textView13"
                    android:layout_marginTop="10dp" />

                <TextView
                    style="@style/SubCaptionStyle"
                    android:text="This product includes software from Intel, Corp. distributed under Intel License Agreement For Open Source Computer Vision Library. Copyright (&#169;) 2000, Intel Corporation"
                    android:id="@+id/textViewIntelLicense"
                    android:layout_marginTop="10dp" />

                <TextView
                    style="@style/SubCaptionStyle"
                    android:text="This product includes the visual assets by Aha-Soft distributed under Basic license https://www.iconfinder.com/licenses/basic"
                    android:id="@+id/textView14"
                    android:layout_marginTop="10dp" />

                <TextView
                    style="@style/SubCaptionStyle"
                    android:text="This product includes 'Android Ripple Background' software by Jason Yu (https://android-arsenal.com/details/1/1107) distributed under MIT licence. See file LICENCE. "
                    android:id="@+id/textView15"
                    android:layout_marginTop="10dp" />

                <TextView
                    style="@style/SubCaptionStyle"
                    android:text="This product includes 'material-dialogs' software by Aidan Michael Follestad (https://github.com/afollestad/material-dialogs) distributed under MIT licence. See file LICENCE. "
                    android:id="@+id/textView16"
                    android:layout_marginTop="10dp" />

                <TextView
                    style="@style/SubCaptionStyle"
                    android:text="App icons by Icons4Android (http://icons4android.com)"
                    android:id="@+id/textView18"
                    android:layout_marginTop="10dp" />

                <TextView
                    style="@style/SubCaptionStyle"
                    android:text="App icons by icons8.com (https://icons8.com/) distributed by Creative Commons Attribution-NoDerivs 3.0 Unported license"
                    android:id="@+id/textView19"
                    android:layout_marginTop="10dp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <!-- The navigation drawer -->
    <RelativeLayout
        android:layout_width="@dimen/navdrawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/left_drawer"
            android:layout_width="@dimen/navdrawer_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_gravity="start"
            android:layout_alignParentTop="true"
            android:background="?attr/colorPrimaryDark"
            android:layout_marginBottom="40dp"/>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/about_row"
            android:layout_width="fill_parent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="?attr/colorPrimaryDark"
            android:orientation="vertical">

            <View style="@style/Divider"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:id="@+id/rowIcon"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:src="@drawable/ic_action_about"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/about"
                    android:id="@+id/rowText"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:textColor="#ffffff" />

            </LinearLayout>

        </LinearLayout>

        <!--<android.support.v7.widget.RecyclerView-->
        <!--android:id="@+id/left_bottom_drawer"-->
        <!--android:layout_width="@dimen/navdrawer_width"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="start"-->

        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_below="@id/left_drawer"-->
        <!-- -->
        <!--android:layout_alignParentStart="true"-->
        <!--android:background="@android:color/white"/>-->

    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>